# orthanc-tcia

./: AUTHORS  CITATION.cff  CMakeLists.txt  NEWS  README
Plugin/: CsvParser.cpp  CsvParser.h  HttpCache.cpp  HttpCache.h  Plugin.cpp  TciaImportJob.cpp  TciaImportJob.h
Resources/: OrthancExplorer.js  SyncOrthancFolder.py  WindowsResources.py  WindowsResources.rc
Resources/CMake/: LibCsvConfiguration.cmake  WebApplicationResources.cmake
WebApplication/: app.js  index.html
